# shader-samples

./: .gitmodules  CMakeLists.txt  README.md  shade  shade.bat
TestSTLShader/: test_contract.cpp
TestShader/: CMakeLists.txt
cmake/: ShaderTools.cmake
samples/: CMakeLists.txt
samples/Initial/: CMakeLists.txt  app.cpp  contract.cpp  contract.h
samples/TestSTLShader/: CMakeLists.txt  test_contract.cpp
samples/TestShader/: CMakeLists.txt  contract_sid.i  test_contract.cpp  test_contract.h
scripts/: create_contract.py  delete_contract.py  manager.py
scripts/commands/: create_project.py  init.py
scripts/template/: CMakeLists.txt  CMakeSettings.json
scripts/template/shaders/: CMakeLists.txt  app.cpp  contract.cpp  contract.h
scripts/template/unittests/: CMakeLists.txt  shader_test.cpp
shaderlib/: CMakeLists.txt  shader_lib.cpp
